# api/routers.go
@@ -37,6 +37,7 @@ func New(cfg Config) *gin.Engine {
 	)
 
 	r.POST("/v1/user/create-user/", HandlerV1.CreatUser)
+	r.GET("/v1/user/list-users/", HandlerV1.ListUsers)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
